# bitstring

./: AUTHORS  LICENSE  README  bitstring.cabal
Data/Binary/BitString/: BitGet.hs  BitString.hs  Tests.hs
